--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -409,10 +409,13 @@
                                                 >가입일 순</span
                                             >
                                             <span class="sort-filter-option"
-                                                >이름순</span
+                                                >활동중</span
                                             >
                                             <span class="sort-filter-option"
-                                                >활동 상태</span
+                                                >정지</span
+                                            >
+                                            <span class="sort-filter-option"
+                                            >탈퇴</span
                                             >
                                         </div>
                                         <!-- Action Buttons -->
