--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -405,16 +405,16 @@
                                     <div class="filter_wrap">
                                         <div class="SortFilterOptions">
                                             <span
-                                                class="sort-filter-option selected"
+                                                class="sort-filter-option selected" data-type="recent"
                                                 >가입일 순</span
                                             >
-                                            <span class="sort-filter-option"
+                                            <span class="sort-filter-option" data-type="active"
                                                 >활동중</span
                                             >
-                                            <span class="sort-filter-option"
+                                            <span class="sort-filter-option" data-type="suspended"
                                                 >정지</span
                                             >
-                                            <span class="sort-filter-option"
+                                            <span class="sort-filter-option" data-type="withdrawn"
                                             >탈퇴</span
                                             >
                                         </div>
