--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -4132,7 +4132,10 @@
                                                 >최신순</span
                                             >
                                             <span class="sort-filter-option"
-                                                >답변 상태순</span
+                                                >답변 대기</span
+                                            >
+                                            <span class="sort-filter-option"
+                                                >답변 완료</span
                                             >
                                         </div>
                                         <!-- Action Buttons -->
@@ -4444,7 +4447,10 @@
                                                 >최신순</span
                                             >
                                             <span class="sort-filter-option"
-                                                >답변 상태순</span
+                                                >답변 대기</span
+                                            >
+                                            <span class="sort-filter-option"
+                                                >답변 완료</span
                                             >
                                         </div>
                                         <!-- Action Buttons -->
