--- a/src/main/resources/templates/admin/admin.html
+++ b/src/main/resources/templates/admin/admin.html
@@ -1013,6 +1013,12 @@
                                             <span class="sort-filter-option"
                                                 >지원 취소</span
                                             >
+                                            <span class="sort-filter-option"
+                                                >지원 합격</span
+                                            >
+                                            <span class="sort-filter-option"
+                                                >지원 불합격</span
+                                            >
                                         </div>
                                         <!-- Action Buttons -->
                                         <div class="action-buttons">
@@ -1327,10 +1333,16 @@
                                                 >최신순</span
                                             >
                                             <span class="sort-filter-option"
+                                                >면접 예정</span
+                                            >
+                                            <span class="sort-filter-option"
+                                                >면접 취소</span
+                                            >
+                                            <span class="sort-filter-option"
                                                 >면접 합격</span
                                             >
                                             <span class="sort-filter-option"
-                                                >면접 예정</span
+                                                >면접 불합격</span
                                             >
                                         </div>
                                         <!-- Action Buttons -->
@@ -1650,6 +1662,9 @@
                                             >
                                             <span class="sort-filter-option"
                                                 >포지션 수료</span
+                                            >
+                                            <span class="sort-filter-option"
+                                                >포지션 미수료</span
                                             >
                                         </div>
                                         <!-- Action Buttons -->
