--- a/src/main/resources/templates/community/community-post-list.html
+++ b/src/main/resources/templates/community/community-post-list.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="/static/css/main.css" />
+        <link rel="stylesheet" href="/css/main.css" />
         <link
             rel="stylesheet"
             href="/css/community/community-post-list.css"
@@ -74,6 +74,7 @@
                                         <button
                                             type="button"
                                             class="spr btn-search"
+                                            id="search-button"
                                         >
                                             <span class="blind">검색</span>
                                             <svg class="icon-search">
@@ -89,71 +90,48 @@
                             <div class="qna-list-wrap">
                                 <div class="qna-list-sort">
                                     <div class="inp-box line filter">
-                                        <span class="chk">
-                                            <input
-                                                type="checkbox"
-                                                id="popular"
-                                                class="btn-sort"
-                                                value="popular"
-                                            />
-                                            <label class="lbl" for="popular"
-                                                >인기순</label
-                                            >
-                                        </span>
-                                        <span class="chk">
-                                            <input
-                                                type="checkbox"
-                                                id="reg-dt"
-                                                class="btn-sort"
-                                                value="reg-dt"
-                                                checked=""
-                                            />
-                                            <label class="lbl" for="reg-dt"
-                                                >최신순</label
-                                            >
-                                        </span>
-                                        <span class="chk">
-                                            <input
-                                                type="checkbox"
-                                                id="max-anwr"
-                                                class="btn-sort"
-                                                value="max-anwr"
-                                            />
-                                            <label class="lbl" for="max-anwr"
-                                                >댓글 많은 순</label
-                                            >
-                                        </span>
+                                <span class="chk">
+                                    <input
+                                            type="checkbox"
+                                            id="popular"
+                                            class="btn-sort"
+                                            value="조회수순"
+                                    />
+                                    <label class="lbl" for="popular">인기순</label>
+                                </span>
+                                                            <span class="chk">
+                                    <input
+                                            type="checkbox"
+                                            id="reg-dt"
+                                            class="btn-sort"
+                                            value="최신순"
+                                            checked=""
+                                    />
+                                    <label class="lbl" for="reg-dt">최신순</label>
+                                </span>
+                                                            <span class="chk">
+                                    <input
+                                            type="checkbox"
+                                            id="max-anwr"
+                                            class="btn-sort"
+                                            value="댓글 많은 순"
+                                    />
+                                    <label class="lbl" for="max-anwr">댓글 많은 순</label>
+                                </span>
                                     </div>
                                     <button
-                                        type="button"
-                                        class="btn-type size-l btn-qna-write"
+                                            type="button"
+                                            class="btn-type size-l btn-qna-write"
+                                            onclick="window.location.href='/community/post-write'"
                                     >
                                         게시글 작성
                                     </button>
                                 </div>
-                                <ul class="qna-list" id="qst-and-ans-list">
-                                    <!-- JavaScript로 게시글을 동적으로 추가 -->
+
+                                <ul class="qna-list" id="qst-and-ans-list" style="list-style: none">
                                 </ul>
-                                <div class="page-box">
-                                    <span class="btn-type size-s active"
-                                        >1</span
-                                    >
-                                    <a class="btn-type size-s" href="#">2</a>
-                                    <a class="btn-type size-s" href="#">3</a>
-                                    <a class="btn-type size-s" href="#">4</a>
-                                    <a class="btn-type size-s" href="#">5</a>
-                                    <a class="btn-type size-s" href="#">6</a>
-                                    <a class="btn-type size-s" href="#">7</a>
-                                    <a class="btn-type size-s" href="#">8</a>
-                                    <a class="btn-type size-s" href="#">9</a>
-                                    <a class="btn-type size-s" href="#">10</a>
-                                    <a
-                                        class="btn-type size-s btn-next"
-                                        type="button"
-                                        href="#"
-                                    >
-                                        다음
-                                    </a>
+
+                                <div class="page-box" id="page-box">
                                 </div>
                             </div>
                         </div>
