--- a/src/main/resources/templates/community/community-details.html
+++ b/src/main/resources/templates/community/community-details.html
@@ -17,13 +17,11 @@
                     <div class="company-honest-qna">
                         <div class="contents-container detail-wrap">
                             <a
-                                href=""
+                                href="/community/community-post-list"
                                 class="btn-type size-s btn-gray btn-back-list"
                                 ><span>전체 게시글</span></a
                             >
-                            <!-- 게시글 보기 -->
                             <div class="post-view-wrap">
-                                <!-- 게시글 상단 -->
                                 <div class="post-top">
                                     <h1 class="qna-subject" id="post-title">
                                     </h1>
@@ -36,9 +34,6 @@
                                         </button>
                                     </div>
                                 </div>
-                                <!-- // 게시글 상단 -->
-
-                                <!-- 게시글 정보 -->
                                 <div class="post-infos">
                                     <div class="post-profile">
                                         <div class="profile-pic-wrap">
@@ -232,21 +227,6 @@
                                                     <div
                                                         class="comment-data-wrap"
                                                     >
-                                                        <button
-                                                            type="button"
-                                                            class="comment-data comment-like"
-                                                            onclick="DETAILPAGE.Detail.likeBtnClick(this, '949382', 'anwr')"
-                                                        >
-                                                            2
-                                                        </button>
-                                                        <button
-                                                            type="button"
-                                                            class="comment-data comment-reply comment-write-button"
-                                                            onclick=""
-                                                        >
-                                                            대댓글달기
-                                                            <strong>1</strong>
-                                                        </button>
                                                     </div>
                                                     <div class="comment-info">
                                                         <span
@@ -293,124 +273,7 @@
                                                 </button>
                                             </div>
 
-                                            <!-- 대댓글 -->
-                                            <div
-                                                class="comment-reply-wrap list-reply"
-                                            >
-                                                <div id="list-reply-949382">
-                                                    <div
-                                                        class="comment-view my-comment"
-                                                    >
-                                                        <span
-                                                            class="comment-txt"
-                                                        >
-                                                            ㅇㅇ
-                                                            <span
-                                                                id="comment-txt-original-949825"
-                                                                style="
-                                                                    display: none;
-                                                                "
-                                                                >ㅇㅇ</span
-                                                            >
-                                                        </span>
 
-                                                        <div
-                                                            class="comment-data-wrap"
-                                                        >
-                                                            <button
-                                                                type="button"
-                                                                class="comment-data comment-like"
-                                                                onclick="DETAILPAGE.Detail.likeBtnClick(this, '949825', 'anwr')"
-                                                            >
-                                                                공감하기
-                                                            </button>
-                                                        </div>
-
-                                                        <div
-                                                            class="comment-info"
-                                                        >
-                                                            <span
-                                                                class="comment-from"
-                                                            >
-                                                                <span
-                                                                    class="nickname"
-                                                                    data-reg-mem-idx="20920058"
-                                                                >
-                                                                    uUPHjiAGdXf6ghf </span
-                                                                >님이 오늘 6시간
-                                                                전 작성
-                                                            </span>
-                                                            <div
-                                                                class="profile-pic-wrap"
-                                                            >
-                                                                <a
-                                                                    href="/zf-user/company-review-qst-and-ans/profile?idx=4167532"
-                                                                    target="-blank"
-                                                                    ><div
-                                                                        class="profile-pic profile1"
-                                                                    >
-                                                                        <svg>
-                                                                            <use
-                                                                                xlink:href="#profile-pic1"
-                                                                            ></use>
-                                                                        </svg></div
-                                                                ></a>
-                                                            </div>
-                                                        </div>
-
-                                                        <button
-                                                            type="button"
-                                                            class="btn-comment-etc"
-                                                        >
-                                                            수정 및 삭제
-                                                        </button>
-                                                        <div
-                                                            class="comment-modify-wrap"
-                                                        >
-                                                            <button
-                                                                type="button"
-                                                                class="btn-comment-mnd"
-                                                                onmousedown="DETAILPAGE.Detail.myQnaContentsEditForm(this, '949825', '949382' )"
-                                                            >
-                                                                수정
-                                                            </button>
-                                                            <button
-                                                                type="button"
-                                                                class="btn-comment-mnd"
-                                                                onmousedown="DETAILPAGE.Detail.myQnaContentsDelete('949825', 'anwr')"
-                                                            >
-                                                                삭제
-                                                            </button>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <!-- // 대댓글 -->
-
-                                            <!-- 대댓글/답글 입력 -->
-                                            <div class="comment-reply-input">
-                                                <div class="comment-write">
-                                                    <input
-                                                        type="text"
-                                                        name="reply-contents-949382"
-                                                        id="reply-contents-949382"
-                                                        value=""
-                                                        class=""
-                                                        placeholder="답변에 댓글을 입력해 보세요."
-                                                    />
-                                                </div>
-                                                <button
-                                                    type="button"
-                                                    class="btn-post btn-reply-register comment-reply-submit"
-                                                    data-qust-idx="81294"
-                                                    data-call-mem-idx=""
-                                                    data-uper-anwr-idx="949382"
-                                                    onclick=""
-                                                >
-                                                    등록
-                                                </button>
-                                            </div>
-                                            <!-- //대댓글/답글 입력 -->
                                         </li>
 
                                         <div
